src/main/java/org/example/filestorageapi/errors/InvalidPathException.java
package org.example.filestorageapi.errors;

public class InvalidPathException extends RuntimeException {
    public InvalidPathException(String message) {
        super(message);
    }
}
